--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       >
         <img
           class="w-[150px] mix-blend-screen mr-60"
-          src="https://i.redd.it/3d-rendered-the-cyberpunk-logo-using-blender-v0-khopj82wqee91.png?width=1920&format=png&auto=webp&s=f42dbd8f5c04aedb9ba9291c1ba4d679029cc1f3"
+          src="/public/Cyberpunk.webp"
           alt=""
         />
         <div class="flex gap-32 text-xl text-white mr-56">
@@ -30,7 +30,7 @@
       <div class="hero w-full min-h-screen overflow-hidden relative">
         <img
           class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[60%] mix-blend-screen filter saturate-150 contrast-125 pointer-events-none z-20"
-          src="https://i.redd.it/3d-rendered-the-cyberpunk-logo-using-blender-v0-khopj82wqee91.png?width=1920&format=png&auto=webp&s=f42dbd8f5c04aedb9ba9291c1ba4d679029cc1f3"
+          src="/public/Cyberpunk.webp"
           alt=""
         />
         <canvas
